--- a/速递医疗 医生端/Info.plist
+++ b/速递医疗 医生端/Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>MOBAppSecret</key>
+	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
-	<key>MOBAppkey</key>
-	<string>2336f7199e004</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleExecutable</key>
