--- a/速递医疗 医生端/Info.plist
+++ b/速递医疗 医生端/Info.plist
@@ -60,7 +60,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
@@ -104,17 +104,17 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>是否允许此App使用你的相机?</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string></string>
+	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
+	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string></string>
+	<string>是否允许此App使用你的麦克风？</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>是否允许此App访问你的媒体资料库?</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
