--- a/速递医疗 医生端/Info.plist
+++ b/速递医疗 医生端/Info.plist
@@ -60,7 +60,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>10</string>
+	<string>11</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
@@ -106,11 +106,11 @@
 	<key>NSCameraUsageDescription</key>
 	<string>是否允许此App使用你的相机?</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+	<string>使用位置以发现您周边的病人</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+	<string>使用位置以发现您周边的病人</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+	<string>使用位置以发现您周边的病人</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>是否允许此App使用你的麦克风？</string>
 	<key>NSPhotoLibraryUsageDescription</key>
